--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+main{
+height: 150px;
+width: 150px;
+background-color: black;
+}
+p{
+color: white;
+/* margin left of 32px and padding of 10px. */
+margin-left: 32px;
+padding: 10px;
+
+}
