--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 
 /* Your CSS Code here. */
-main{
+main .Accio #Job{
 height: 150px;
 width: 150px;
 background-color: black;
 }
-p{
+p.hello-accio-job{
 color: white;
 /* margin left of 32px and padding of 10px. */
 margin-left: 32px;
